--- a/src/css/App.css
+++ b/src/css/App.css
@@ -29,7 +29,7 @@
 .about .App-header {
   background-color: #21a371;
 }
-.users .App-header {
+.projects .App-header {
   background-color: #eedf5a;
 }
 .App-link {
