--- a/src/css/App.css
+++ b/src/css/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #21a371;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -23,7 +23,7 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-.home .App-header {
+/* .home .App-header {
   background-color: #4964da;
 }
 .about .App-header {
@@ -34,7 +34,7 @@
 }
 .contact .App-header {
   background-color: #ff9843;
-}
+} */
 .App-link {
   color: #61dafb;
 }
