--- a/src/css/App.css
+++ b/src/css/App.css
@@ -44,7 +44,10 @@ a {
   background-color: #f79bc9;
 }
 .project1 .App-header {
-  background-color: #df742e;
+  background-color: #c06427;
+}
+.project2 .App-header {
+  background-color: #8550ff;
 }
 .contact .App-header {
   background-color: #86b7ff;
