--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,6 +1,6 @@
+/* Mobile first */
 body {
   font-family: 'Montserrat Alternates', sans-serif;
-
 }
 ul {
   list-style-type: none;
@@ -9,6 +9,10 @@ ul {
 a {
   color: #336c7c;
   text-decoration: none;
+}
+.project-fs {
+  font-size: .5em;
+  padding:  0 20%;
 }
 .App {
   text-align: center;
@@ -63,6 +67,9 @@ a {
 }
 .home-p {
   color: aliceblue;
+}
+nav ul li a.current {
+  font-weight: bold;
 }
 
 @keyframes App-logo-spin {
